lab_3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-service
spec: 
  type: NodePort
  selector: 
    labs: lab2
  ports:
    - port: 80
