lab_3/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
  labels:
    labs: lab3
spec:
  tls:
    - hosts:
      - lab.ingress.com
      secretName: ingress-nginx
  rules:
  - host: lab.ingress.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lab-service
            port:
              number: 3000
